rustdocs/errors/rust-bitcoin-bitcoin-src-blockdata-transaction.rs.txt
error[E0433]: failed to resolve: there are too many leading `super` keywords
  --> ../rust-bitcoin/bitcoin/src/blockdata/transaction.rs:20:5
   |
20 | use super::Weight;
   |     ^^^^^ there are too many leading `super` keywords

error[E0432]: unresolved import `core`
  --> ../rust-bitcoin/bitcoin/src/blockdata/transaction.rs:13:5
   |
13 | use core::fmt;
   |     ^^^^
   |     |
   |     you might be missing crate `core`
   |     help: try using `std` instead of `core`: `std`

error[E0432]: unresolved import `internals`
  --> ../rust-bitcoin/bitcoin/src/blockdata/transaction.rs:17:5
   |
17 | use internals::{compact_size, const_casts, write_err, ToU64};
   |     ^^^^^^^^^ use of unresolved module or unlinked crate `internals`
   |
help: you might be missing a crate named `internals`, add it to your project and import it in your code
   |
13 + extern crate internals;
   |

error[E0432]: unresolved import `io`
  --> ../rust-bitcoin/bitcoin/src/blockdata/transaction.rs:18:5
   |
18 | use io::{BufRead, Write};
   |     ^^
   |     |
   |     unresolved import
   |     help: a similar path exists: `std::io`

error[E0432]: unresolved import `crate::consensus`
  --> ../rust-bitcoin/bitcoin/src/blockdata/transaction.rs:21:24
   |
21 | use crate::consensus::{self, encode, Decodable, Encodable};
   |                        ^^^^ no `consensus` in the root

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `locktime`
  --> ../rust-bitcoin/bitcoin/src/blockdata/transaction.rs:22:12
   |
22 | use crate::locktime::absolute::{self, Height, MedianTimePast};
   |            ^^^^^^^^ use of unresolved module or unlinked crate `locktime`
   |
help: you might be missing a crate named `locktime`, add it to your project and import it in your code
   |
13 + extern crate locktime;
   |

error[E0432]: unresolved import `crate::locktime`
  --> ../rust-bitcoin/bitcoin/src/blockdata/transaction.rs:22:12
   |
22 | use crate::locktime::absolute::{self, Height, MedianTimePast};
   |            ^^^^^^^^ use of unresolved module or unlinked crate `locktime`
   |
help: you might be missing a crate named `locktime`, add it to your project and import it in your code
   |
13 + extern crate locktime;
   |

error[E0432]: unresolved import `crate::prelude`
  --> ../rust-bitcoin/bitcoin/src/blockdata/transaction.rs:23:12
   |
23 | use crate::prelude::{Borrow, Vec};
   |            ^^^^^^^
   |            |
   |            unresolved import
   |            help: a similar path exists: `std::prelude`

error[E0432]: unresolved import `crate::script`
  --> ../rust-bitcoin/bitcoin/src/blockdata/transaction.rs:24:12
   |
24 | use crate::script::{
   |            ^^^^^^ use of unresolved module or unlinked crate `script`
   |
help: you might be missing a crate named `script`, add it to your project and import it in your code
   |
13 + extern crate script;
   |

error[E0432]: unresolved import `crate::sighash`
  --> ../rust-bitcoin/bitcoin/src/blockdata/transaction.rs:29:12
   |
29 | use crate::sighash::{EcdsaSighashType, TapSighashType};
   |            ^^^^^^^ use of unresolved module or unlinked crate `sighash`
   |
help: you might be missing a crate named `sighash`, add it to your project and import it in your code
   |
13 + extern crate sighash;
   |

error[E0432]: unresolved import `crate::witness`
  --> ../rust-bitcoin/bitcoin/src/blockdata/transaction.rs:30:12
   |
30 | use crate::witness::Witness;
   |            ^^^^^^^ use of unresolved module or unlinked crate `witness`
   |
help: you might be missing a crate named `witness`, add it to your project and import it in your code
   |
13 + extern crate witness;
   |

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `primitives`
  --> ../rust-bitcoin/bitcoin/src/blockdata/transaction.rs:35:9
   |
35 | pub use primitives::transaction::{OutPoint, ParseOutPointError, Transact...
   |         ^^^^^^^^^^ use of unresolved module or unlinked crate `primitives`
   |
help: you might be missing a crate named `primitives`, add it to your project and import it in your code
   |
13 + extern crate primitives;
   |

error[E0432]: unresolved imports `crate::internal_macros`, `crate::Amount`, `crate::FeeRate`, `crate::Sequence`, `crate::SignedAmount`
  --> ../rust-bitcoin/bitcoin/src/blockdata/transaction.rs:31:13
   |
31 | use crate::{internal_macros, Amount, FeeRate, Sequence, SignedAmount};
   |             ^^^^^^^^^^^^^^^  ^^^^^^  ^^^^^^^  ^^^^^^^^  ^^^^^^^^^^^^ no `SignedAmount` in the root
   |             |                |       |        |
   |             |                |       |        no `Sequence` in the root
   |             |                |       no `FeeRate` in the root
   |             |                no `Amount` in the root
   |             no `internal_macros` in the root

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `internals`
    --> ../rust-bitcoin/bitcoin/src/blockdata/transaction.rs:1190:1
     |
1190 | internals::transparent_newtype! {
     | ^^^^^^^^^ use of unresolved module or unlinked crate `internals`

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `io`
  --> ../rust-bitcoin/bitcoin/src/blockdata/transaction.rs:38:79
   |
38 | ...t<usize, io::Error> {
   |             ^^ use of unresolved module or unlinked crate `io`
   |
   = help: you might be missing a crate named `io`
help: a builtin type with a similar name exists
   |
38 -     fn consensus_encode<W: Write + ?Sized>(&self, w: &mut W) -> Result<usize, io::Error> {
38 +     fn consensus_encode<W: Write + ?Sized>(&self, w: &mut W) -> Result<usize, i8::Error> {
   |
help: consider importing this module
   |
13 + use std::io;
   |

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `io`
  --> ../rust-bitcoin/bitcoin/src/blockdata/transaction.rs:50:79
   |
50 | ...t<usize, io::Error> {
   |             ^^ use of unresolved module or unlinked crate `io`
   |
   = help: you might be missing a crate named `io`
help: a builtin type with a similar name exists
   |
50 -     fn consensus_encode<W: Write + ?Sized>(&self, w: &mut W) -> Result<usize, io::Error> {
50 +     fn consensus_encode<W: Write + ?Sized>(&self, w: &mut W) -> Result<usize, i8::Error> {
   |
help: consider importing this module
   |
13 + use std::io;
   |

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `io`
   --> ../rust-bitcoin/bitcoin/src/blockdata/transaction.rs:668:79
    |
668 | ...t<usize, io::Error> {
    |             ^^ use of unresolved module or unlinked crate `io`
    |
    = help: you might be missing a crate named `io`
help: a builtin type with a similar name exists
    |
668 -     fn consensus_encode<W: Write + ?Sized>(&self, w: &mut W) -> Result<usize, io::Error> {
668 +     fn consensus_encode<W: Write + ?Sized>(&self, w: &mut W) -> Result<usize, i8::Error> {
    |
help: consider importing this module
    |
 13 + use std::io;
    |

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `io`
   --> ../rust-bitcoin/bitcoin/src/blockdata/transaction.rs:682:79
    |
682 | ...t<usize, io::Error> {
    |             ^^ use of unresolved module or unlinked crate `io`
    |
    = help: you might be missing a crate named `io`
help: a builtin type with a similar name exists
    |
682 -     fn consensus_encode<W: Write + ?Sized>(&self, w: &mut W) -> Result<usize, io::Error> {
682 +     fn consensus_encode<W: Write + ?Sized>(&self, w: &mut W) -> Result<usize, i8::Error> {
    |
help: consider importing this module
    |
 13 + use std::io;
    |

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `io`
   --> ../rust-bitcoin/bitcoin/src/blockdata/transaction.rs:694:79
    |
694 | ...t<usize, io::Error> {
    |             ^^ use of unresolved module or unlinked crate `io`
    |
    = help: you might be missing a crate named `io`
help: a builtin type with a similar name exists
    |
694 -     fn consensus_encode<W: Write + ?Sized>(&self, w: &mut W) -> Result<usize, io::Error> {
694 +     fn consensus_encode<W: Write + ?Sized>(&self, w: &mut W) -> Result<usize, i8::Error> {
    |
help: consider importing this module
    |
 13 + use std::io;
    |

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `io`
   --> ../rust-bitcoin/bitcoin/src/blockdata/transaction.rs:717:79
    |
717 | ...t<usize, io::Error> {
    |             ^^ use of unresolved module or unlinked crate `io`
    |
    = help: you might be missing a crate named `io`
help: a builtin type with a similar name exists
    |
717 -     fn consensus_encode<W: Write + ?Sized>(&self, w: &mut W) -> Result<usize, io::Error> {
717 +     fn consensus_encode<W: Write + ?Sized>(&self, w: &mut W) -> Result<usize, i8::Error> {
    |
help: consider importing this module
    |
 13 + use std::io;
    |

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `io`
   --> ../rust-bitcoin/bitcoin/src/blockdata/transaction.rs:729:79
    |
729 | ...t<usize, io::Error> {
    |             ^^ use of unresolved module or unlinked crate `io`
    |
    = help: you might be missing a crate named `io`
help: a builtin type with a similar name exists
    |
729 -     fn consensus_encode<W: Write + ?Sized>(&self, w: &mut W) -> Result<usize, io::Error> {
729 +     fn consensus_encode<W: Write + ?Sized>(&self, w: &mut W) -> Result<usize, i8::Error> {
    |
help: consider importing this module
    |
 13 + use std::io;
    |

error[E0425]: cannot find type `Coinbase` in this scope
    --> ../rust-bitcoin/bitcoin/src/blockdata/transaction.rs:1206:6
     |
1206 | impl Coinbase {
     |      ^^^^^^^^ not found in this scope

error: aborting due to 22 previous errors

Some errors have detailed explanations: E0425, E0432, E0433.
For more information about an error, try `rustc --explain E0425`.
